[gd_scene load_steps=3 format=3 uid="uid://3ma74db8c38n"]

[ext_resource type="Texture2D" uid="uid://fuas0idis34x" path="res://sprites/Banner.png" id="1_w634q"]
[ext_resource type="Script" path="res://scripts/StageButton.gd" id="2_jc007"]

[node name="StageButton" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 1912.0
offset_bottom = 548.0
scale = Vector2(0.1, 0.1)
script = ExtResource("2_jc007")
target_location = 1

[node name="TextureRect" type="TextureButton" parent="."]
layout_mode = 2
offset_right = 1865.0
offset_bottom = 548.0
texture_normal = ExtResource("1_w634q")

[node name="Label" type="Label" parent="."]
layout_mode = 2
offset_right = 1870.0
offset_bottom = 550.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 200
text = "Stage"
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="mouse_entered" from="TextureRect" to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="TextureRect" to="." method="_on_mouse_exited"]
[connection signal="pressed" from="TextureRect" to="." method="_on_pressed"]
